fix: SKFP-964 prevent double title on safari

--- a/packages/ui/src/components/Widgets/AuthorizedStudies/AuthorizedStudiesListItem.module.scss
+++ b/packages/ui/src/components/Widgets/AuthorizedStudies/AuthorizedStudiesListItem.module.scss
@@ -34,3 +34,9 @@
         width: 50%;
     }
 }
+
+// Removes double title on safari
+.title::after {
+    content: '';
+    display: block;
+}
